feat: card associations
