# models/protomodels/card.pb.go
@@ -167,12 +167,13 @@ func (m *Card) GetReviewDate() *timestamp.Timestamp {
 }
 
 type RelatedCards struct {
-	Synonyms             []*CardIndex `protobuf:"bytes,1,rep,name=synonyms,proto3" json:"synonyms,omitempty"`
-	Antonyms             []*CardIndex `protobuf:"bytes,2,rep,name=antonyms,proto3" json:"antonyms,omitempty"`
-	Origin               *CardIndex   `protobuf:"bytes,3,opt,name=origin,proto3" json:"origin,omitempty"`
-	Derivatives          []*CardIndex `protobuf:"bytes,4,rep,name=derivatives,proto3" json:"derivatives,omitempty"`
-	InOtherLanguages     []*CardIndex `protobuf:"bytes,5,rep,name=in_other_languages,json=inOtherLanguages,proto3" json:"in_other_languages,omitempty"`
-	Others               []*CardIndex `protobuf:"bytes,6,rep,name=others,proto3" json:"others,omitempty"`
+	Index                *CardIndex   `protobuf:"bytes,1,opt,name=index,proto3" json:"index,omitempty"`
+	Synonyms             []*CardIndex `protobuf:"bytes,2,rep,name=synonyms,proto3" json:"synonyms,omitempty"`
+	Antonyms             []*CardIndex `protobuf:"bytes,3,rep,name=antonyms,proto3" json:"antonyms,omitempty"`
+	Origin               *CardIndex   `protobuf:"bytes,4,opt,name=origin,proto3" json:"origin,omitempty"`
+	Derivatives          []*CardIndex `protobuf:"bytes,5,rep,name=derivatives,proto3" json:"derivatives,omitempty"`
+	InOtherLanguages     []*CardIndex `protobuf:"bytes,6,rep,name=in_other_languages,json=inOtherLanguages,proto3" json:"in_other_languages,omitempty"`
+	Others               []*CardIndex `protobuf:"bytes,7,rep,name=others,proto3" json:"others,omitempty"`
 	XXX_NoUnkeyedLiteral struct{}     `json:"-"`
 	XXX_unrecognized     []byte       `json:"-"`
 	XXX_sizecache        int32        `json:"-"`
@@ -202,6 +203,13 @@ func (m *RelatedCards) XXX_DiscardUnknown() {
 }
 
 var xxx_messageInfo_RelatedCards proto.InternalMessageInfo
+
+func (m *RelatedCards) GetIndex() *CardIndex {
+	if m != nil {
+		return m.Index
+	}
+	return nil
+}
 
 func (m *RelatedCards) GetSynonyms() []*CardIndex {
 	if m != nil {
@@ -303,37 +311,37 @@ func init() {
 func init() { proto.RegisterFile("card.proto", fileDescriptor_95fd8cb6caa913ee) }
 
 var fileDescriptor_95fd8cb6caa913ee = []byte{
-	// 502 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x7c, 0x92, 0xc1, 0x6f, 0xda, 0x30,
-	0x14, 0xc6, 0x97, 0x00, 0x19, 0xbc, 0xa0, 0x2d, 0xb3, 0x34, 0x14, 0xf5, 0xb2, 0x88, 0x13, 0xea,
-	0xa6, 0x54, 0x65, 0x97, 0x49, 0x3b, 0x45, 0x25, 0x83, 0x4c, 0x2c, 0x4c, 0x0e, 0xab, 0xd4, 0x53,
-	0x64, 0x88, 0xcb, 0x2c, 0x25, 0x36, 0x8a, 0x5d, 0x06, 0xff, 0xe8, 0xfe, 0x9a, 0x1d, 0xa6, 0x38,
-	0x04, 0xd1, 0x43, 0x39, 0x25, 0xfe, 0xde, 0xef, 0x7b, 0x7e, 0xdf, 0x93, 0x01, 0xd6, 0xa4, 0xcc,
-	0xfc, 0x6d, 0x29, 0x94, 0x40, 0xb6, 0xfe, 0x14, 0x22, 0xa3, 0xb9, 0xbc, 0xfa, 0xb0, 0x11, 0x62,
-	0x93, 0xd3, 0x1b, 0xad, 0xad, 0x9e, 0x1e, 0x6f, 0x14, 0x2b, 0xa8, 0x54, 0xa4, 0xd8, 0xd6, 0xf4,
-	0xf0, 0x9f, 0x01, 0xed, 0x3b, 0x52, 0x66, 0xe8, 0x13, 0x74, 0x18, 0xcf, 0xe8, 0xde, 0x35, 0x3c,
-	0x63, 0x64, 0x8f, 0x07, 0xfe, 0x59, 0x1b, 0xbf, 0x22, 0xa2, 0xaa, 0x8a, 0x6b, 0x08, 0x0d, 0xc0,
-	0xca, 0xc9, 0x8a, 0xe6, 0xd2, 0x35, 0xbd, 0xd6, 0xa8, 0x87, 0x8f, 0x27, 0x34, 0x84, 0x3e, 0xdd,
-	0x6f, 0x73, 0xc2, 0x89, 0x62, 0x82, 0x4b, 0xb7, 0xa5, 0xab, 0xcf, 0x34, 0xf4, 0x11, 0xde, 0xd1,
-	0x3d, 0x29, 0xb6, 0x39, 0x4d, 0x25, 0xe5, 0x8a, 0xf2, 0x35, 0x95, 0x6e, 0x5b, 0x83, 0xce, 0xb1,
-	0x90, 0x34, 0x3a, 0xf2, 0xc0, 0x7e, 0x24, 0x05, 0xcb, 0x19, 0x29, 0x99, 0x3a, 0xb8, 0x1d, 0xcf,
-	0x18, 0x75, 0xf0, 0xb9, 0x84, 0xbe, 0x82, 0x5d, 0xd2, 0x1d, 0xa3, 0x7f, 0xd2, 0x8c, 0x28, 0xea,
-	0x5a, 0x7a, 0xfc, 0x2b, 0xbf, 0x0e, 0xee, 0x37, 0xc1, 0xfd, 0x65, 0x13, 0x1c, 0x43, 0x8d, 0x4f,
-	0x88, 0xa2, 0xc3, 0xbf, 0x26, 0xf4, 0x31, 0xcd, 0x89, 0xa2, 0x59, 0x95, 0x51, 0xa2, 0x31, 0x74,
-	0xe5, 0x81, 0x0b, 0x7e, 0x28, 0xa4, 0x6b, 0x78, 0xad, 0x0b, 0x9b, 0x38, 0x71, 0x95, 0x87, 0x70,
-	0x55, 0x7b, 0xcc, 0xcb, 0x9e, 0x86, 0x43, 0x3e, 0x58, 0xa2, 0x64, 0x1b, 0xc6, 0xdd, 0xd6, 0xc5,
-	0x7d, 0x1f, 0x29, 0xf4, 0x05, 0xec, 0x8c, 0x96, 0x6c, 0x47, 0x14, 0xdb, 0x1d, 0xd7, 0xf5, 0xb2,
-	0xe9, 0x1c, 0x45, 0x13, 0x40, 0x8c, 0xa7, 0x42, 0xfd, 0xa6, 0x65, 0x9a, 0x13, 0xbe, 0x79, 0x22,
-	0x1b, 0x2a, 0xdd, 0xce, 0xc5, 0x06, 0x0e, 0xe3, 0x8b, 0xca, 0x30, 0x6f, 0x78, 0x3d, 0x6f, 0xa5,
-	0x48, 0xd7, 0xba, 0xe8, 0x3c, 0x52, 0x43, 0x0c, 0xbd, 0x93, 0x88, 0x10, 0xb4, 0x39, 0x29, 0xa8,
-	0x7e, 0x5a, 0x3d, 0xac, 0xff, 0xd1, 0x2d, 0x74, 0x9b, 0x69, 0x5c, 0xd3, 0x33, 0x46, 0x6f, 0xc6,
-	0xef, 0x9f, 0xb5, 0x6c, 0xae, 0xc6, 0x27, 0xec, 0xfa, 0x16, 0xba, 0x8d, 0x8a, 0x6c, 0x78, 0x1d,
-	0xc6, 0xd3, 0x79, 0x94, 0xcc, 0x9c, 0x57, 0xa8, 0x0f, 0xdd, 0xef, 0xc1, 0xcf, 0x20, 0x0e, 0x93,
-	0xd0, 0x31, 0x10, 0x80, 0xf5, 0x0d, 0x87, 0xf1, 0xdd, 0xcc, 0x31, 0xaf, 0x05, 0x38, 0x81, 0x94,
-	0x62, 0xcd, 0xf4, 0xdb, 0x5b, 0x1e, 0xb6, 0x54, 0x56, 0x74, 0xf2, 0x10, 0x2f, 0xe2, 0x87, 0x1f,
-	0x49, 0xed, 0x0d, 0xe2, 0x65, 0x7d, 0xd2, 0xde, 0x05, 0x8e, 0xa6, 0x51, 0xec, 0x98, 0xe8, 0x2d,
-	0xd8, 0x93, 0x10, 0x47, 0xf7, 0xc1, 0x32, 0xba, 0x0f, 0x13, 0xa7, 0x85, 0x06, 0x80, 0xa2, 0x38,
-	0x5d, 0x2c, 0x67, 0x21, 0x4e, 0xe7, 0x41, 0x3c, 0xfd, 0x15, 0x4c, 0xc3, 0xc4, 0x69, 0x6b, 0x53,
-	0x25, 0x26, 0x4e, 0x67, 0x65, 0xe9, 0x0c, 0x9f, 0xff, 0x07, 0x00, 0x00, 0xff, 0xff, 0xbc, 0x1c,
-	0x46, 0x00, 0x92, 0x03, 0x00, 0x00,
+	// 505 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x94, 0x92, 0xcf, 0x6f, 0xda, 0x4e,
+	0x10, 0xc5, 0xbf, 0xe6, 0x87, 0x03, 0x63, 0xf4, 0xad, 0xbb, 0x52, 0x91, 0x95, 0x4b, 0x11, 0x27,
+	0x94, 0x56, 0x8e, 0x42, 0x2f, 0x95, 0x7a, 0xb2, 0x82, 0x0b, 0xae, 0xa8, 0xa9, 0xd6, 0x34, 0x52,
+	0x4e, 0xd6, 0x82, 0x27, 0x74, 0x25, 0x7b, 0x8d, 0xbc, 0x1b, 0x0a, 0xf7, 0xfe, 0xd9, 0x3d, 0x54,
+	0x5e, 0x63, 0x44, 0x0e, 0x45, 0xea, 0xc9, 0xde, 0x37, 0x9f, 0x37, 0x3b, 0x6f, 0x6c, 0x80, 0x35,
+	0x2b, 0x12, 0x77, 0x5b, 0xe4, 0x2a, 0x27, 0x96, 0x7e, 0x64, 0x79, 0x82, 0xa9, 0xbc, 0x7e, 0xbb,
+	0xc9, 0xf3, 0x4d, 0x8a, 0xb7, 0x5a, 0x5b, 0x3d, 0x3f, 0xdd, 0x2a, 0x9e, 0xa1, 0x54, 0x2c, 0xdb,
+	0x56, 0xf4, 0xf0, 0xb7, 0x01, 0xad, 0x7b, 0x56, 0x24, 0xe4, 0x3d, 0xb4, 0xb9, 0x48, 0x70, 0xef,
+	0x18, 0x03, 0x63, 0x64, 0x8d, 0xfb, 0xee, 0x59, 0x1b, 0xb7, 0x24, 0x82, 0xb2, 0x4a, 0x2b, 0x88,
+	0xf4, 0xc1, 0x4c, 0xd9, 0x0a, 0x53, 0xe9, 0x34, 0x06, 0xcd, 0x51, 0x97, 0x1e, 0x4f, 0x64, 0x08,
+	0x3d, 0xdc, 0x6f, 0x53, 0x26, 0x98, 0xe2, 0xb9, 0x90, 0x4e, 0x53, 0x57, 0x5f, 0x68, 0xe4, 0x1d,
+	0xbc, 0xc6, 0x3d, 0xcb, 0xb6, 0x29, 0xc6, 0x12, 0x85, 0x42, 0xb1, 0x46, 0xe9, 0xb4, 0x34, 0x68,
+	0x1f, 0x0b, 0x51, 0xad, 0x93, 0x01, 0x58, 0x4f, 0x2c, 0xe3, 0x29, 0x67, 0x05, 0x57, 0x07, 0xa7,
+	0x3d, 0x30, 0x46, 0x6d, 0x7a, 0x2e, 0x91, 0x4f, 0x60, 0x15, 0xb8, 0xe3, 0xf8, 0x33, 0x4e, 0x98,
+	0x42, 0xc7, 0xd4, 0xe3, 0x5f, 0xbb, 0x55, 0x70, 0xb7, 0x0e, 0xee, 0x2e, 0xeb, 0xe0, 0x14, 0x2a,
+	0x7c, 0xc2, 0x14, 0x0e, 0x7f, 0x35, 0xa1, 0x47, 0x31, 0x65, 0x0a, 0x93, 0x32, 0xa3, 0xfc, 0xc7,
+	0x35, 0x8c, 0xa1, 0x23, 0x0f, 0x22, 0x17, 0x87, 0xac, 0x5a, 0xc4, 0xdf, 0x0d, 0x27, 0xae, 0xf4,
+	0x30, 0xa1, 0x2a, 0x4f, 0xf3, 0xb2, 0xa7, 0xe6, 0x88, 0x0b, 0x66, 0x5e, 0xf0, 0x0d, 0x17, 0x4e,
+	0xeb, 0xe2, 0x58, 0x47, 0x8a, 0x7c, 0x04, 0x2b, 0xc1, 0x82, 0xef, 0x98, 0xe2, 0x3b, 0x94, 0x4e,
+	0xfb, 0xe2, 0x35, 0xe7, 0x28, 0x99, 0x00, 0xe1, 0x22, 0xce, 0xd5, 0x0f, 0x2c, 0xe2, 0x94, 0x89,
+	0xcd, 0x33, 0xdb, 0xa0, 0x74, 0xcc, 0x8b, 0x0d, 0x6c, 0x2e, 0x16, 0xa5, 0x61, 0x5e, 0xf3, 0x7a,
+	0xde, 0x52, 0x91, 0xce, 0xd5, 0x45, 0xe7, 0x91, 0x1a, 0x52, 0xe8, 0x9e, 0x44, 0x42, 0xa0, 0x25,
+	0x58, 0x86, 0xfa, 0x0b, 0x74, 0xa9, 0x7e, 0x27, 0x77, 0xd0, 0xa9, 0xa7, 0x71, 0x1a, 0x03, 0x63,
+	0xf4, 0xff, 0xf8, 0xcd, 0x8b, 0x96, 0xf5, 0xd5, 0xf4, 0x84, 0xdd, 0xdc, 0x41, 0xa7, 0x56, 0x89,
+	0x05, 0x57, 0x7e, 0x38, 0x9d, 0x07, 0xd1, 0xcc, 0xfe, 0x8f, 0xf4, 0xa0, 0xf3, 0xc5, 0xfb, 0xe6,
+	0x85, 0x7e, 0xe4, 0xdb, 0x06, 0x01, 0x30, 0x3f, 0x53, 0x3f, 0xbc, 0x9f, 0xd9, 0x8d, 0x9b, 0x1c,
+	0x6c, 0x4f, 0xca, 0x7c, 0xcd, 0xf5, 0x9f, 0xba, 0x3c, 0x6c, 0x51, 0x96, 0x74, 0xf4, 0x18, 0x2e,
+	0xc2, 0xc7, 0xaf, 0x51, 0xe5, 0xf5, 0xc2, 0x65, 0x75, 0xd2, 0xde, 0x05, 0x0d, 0xa6, 0x41, 0x68,
+	0x37, 0xc8, 0x2b, 0xb0, 0x26, 0x3e, 0x0d, 0x1e, 0xbc, 0x65, 0xf0, 0xe0, 0x47, 0x76, 0x93, 0xf4,
+	0x81, 0x04, 0x61, 0xbc, 0x58, 0xce, 0x7c, 0x1a, 0xcf, 0xbd, 0x70, 0xfa, 0xdd, 0x9b, 0xfa, 0x91,
+	0xdd, 0xd2, 0xa6, 0x52, 0x8c, 0xec, 0xf6, 0xca, 0xd4, 0x19, 0x3e, 0xfc, 0x09, 0x00, 0x00, 0xff,
+	0xff, 0x9a, 0x5c, 0xac, 0x20, 0xc0, 0x03, 0x00, 0x00,
 }
