# service/service.go
@@ -14,6 +14,8 @@ type CardService interface {
 	EditCard(ctx context.Context, card protomodels.Card) error
 	ListCards(ctx context.Context, conditions storage.ListCardsConditions) ([]protomodels.Card, error)
 	ListIndexes(ctx context.Context) ([]protomodels.CardIndex, error)
+	GetAssociations(ctx context.Context, cardIndex protomodels.CardIndex) (protomodels.RelatedCards, error)
+	CreateAssociations(ctx context.Context, conditions storage.CreateAssociationConditions) error
 
 	// return url
 	SearchWithDictionary(ctx context.Context, cardIndex protomodels.CardIndex) ([]string, error)
